<resources>
    <string name="app_name">QRH</string>
    <string name="long_name">Quick Reference Handbook</string>
    <string name="title_about">About</string>
    <string name="title_settings">Edit locations</string>
    <string name="github"><u>github.com/mttrnd/qrh</u></string>
    <string name="app_type">Android</string>
    <string name="updated">Updated August 2020</string>
    <string name="about_1">Unofficial adaptation of the Association of Anaesthetists Quick Reference Handbook (QRH) August 2019 version. www.anaesthetists.org/qrh</string>
    <string name="about_2">This material is a derivative of the \"Quick Reference Handbook\" ( www.anaesthetists.org/qrh ) by The Association of Anaesthetists ( www.anaesthetists.org ), used under Creative Commons license CC BY-NC-SA 4.0 ( www.creativecommons.org/licenses/by-nc-sa/4.0 ).\n\nSubject to Creative Commons license CC BY-NC-SA 4.0. You may distribute original version or adapt for yourself and distribute with acknowledgement of source. You may not use for commercial purposes.</string>
    <string name="about_3">Please report any bugs via the github page</string>
    <string name="about_4">The guidelines in this handbook are not intended to be standards of medical care. The ultimate judgement with regard to a particular clinical procedure or treatment plan must be made by the clinician in the light of the clinical data presented and the diagnostic and treatment options available.</string>
    <string name="CCBYNCSA">Creative Commons License CC BY-NC-SA 4.0</string>
    <string name="splash_1">As this is your first launch, please read and consider all of the following:</string>
    <string name="splash_2a">This application is an unofficial adaptation of the Association of Anaesthetists Quick Reference Handbook (QRH); a collection of guidelines for unexpected or uncommon anaesthesia-related emergencies. It is not endorsed by the Association of Anaesthetists. As per the original accompanying guidance:</string>
    <string name="splash_2b">\"The QRH is not a substitute for learning and practising clinical skills. Nor is it a substitute for being familiar with more detailed guidelines and algorithms, such as those for managing cardiac arrest or difficult airway.\n\nIt\'s essential that clinicians learn about these and practice their implementation elsewhere. For example, it\'s expected that in using the QRH guideline for managing cardiac arrest, clinicians will already have underlying knowledge of conditions causing cardiac arrest and will be competent in providing advanced life support.\n\nThe QRH is also not intended to be used as a rule book every single time one of the guideline situations is encountered. For instance, most ordinary occasions of hypotension will have a simple cause and will respond to obvious remedies. The hypotension guideline becomes useful if the situation is out of the  ordinary or becomes unremitting. Conversely, for the more immediate and uncommon problems, such as cardiac arrest in theatre, the guideline should be used from the outset to help avoid missing out useful steps in resolving the situation.\"</string>
    <string name="splash_3">This application is intended for educational use only by healthcare professionals in the United Kingdom who are already familiar with the QRH. It may be used to support learning and rehearsal of emergency responses. <b>It has not been professionally developed nor tested therefore is not recommended for clinical use.</b> The developer accepts no responsibility for or liability arising from any decision to use in a clinical setting despite this warning. You should consider the advice of your employer, regulatory and professional bodies regarding the use of software applications, and always exercise professional judgement before relying on information from any source.\n\nThis application is <u>not</u> presented as a medical device in the United Kingdom. <b>It carries no certification markings, regulatory approvals or technical assessment appraisals.</b> According to the latest Medicines and Healthcare products Regulatory Agency guidance <i>\"Medical device stand-alone software including apps\"</i> (Last updated 4th June 2020) at the time of this release; software is unlikely to be a device if it just reproduces a paper document in digital format, provides reference information to follow the path of a procedure/treatment, or it has decision points but the healthcare professional decides which path to take (as they ultimately rely on their own knowledge). The developer believes that the application falls within this \'non medical function\' remit.\n\nRegulations may change with time. Distribution by the developer will be ceased if advised to do so or if this application subsequently becomes subject to regulatory approval. Please periodically check whether regulations have changed, and stop using this application if you are unsure about it\'s status. Due to the offline and open-source nature of the application, however, the developer cannot be held responsible for ongoing use and distribution of the application or its source code by other parties beyond such a time.\n\nFor more information please see: https://www.gov.uk/government/publications/medical-devices-software-applications-apps</string>
    <string name="splash_4">This application reproduces the August 2019 version of the QRH, adapted to fit the mobile application format. Content has largely been transcribed verbatim, except for minor formatting, punctuation and structure tweaks that do not meaningfully alter the guidelines, and the introduction of TALLman Lettering to improve the readability of certain words. The developer assumes no responsibility or liability for any errors or omissions in the content. The information is provided on an \"as is\" basis with no guarantees of completeness, accuracy, usefulness or timeliness. Drug indications and doses may be incorrect, and do not take into account individual circumstances such as comorbidities, interactions, renal and hepatic function. Likewise, the application is provided on an \"as is\" basis with no guarantees of usefulness, performance or reliability. The developer, original QRH authors, or anyone else connected in any way with the QRH or application, cannot be held responsible for your use of the information contained in or linked from this application. Links to external websites and telephone numbers are provided for convenience and informational purposes only; they do not constitute an endorsement and the developer is not responsible for any third-party content accessed through them.\n\nThe QRH is updated from time to time. A version number is displayed next to each guideline in the list view, and in the header and footer when opened; these correspond with the Association of Anaesthetists guideline versioning. You must check that the guidelines you are using are up to date. The developer will endeavour to keep the application updated with any new QRH revision, but there will be a delay between release from the Association of Anaesthetists and release of an application update. If any guidelines contained within the application become superseded, please revert to using the latest version from the Association of Anaesthetists. Alternatively, the source code could be obtained from github.com/mttrnd/qrh and updated by the end-user.\n\nThis application does not collect, store or transmit any personal data. This application allows you to set short reminders for locations of emergency equipment; please do not misuse this function to enter any personal, sensitive or patient-related data. These reminders are held on your device, are not intentionally transmitted anywhere by the application and not accessible to or stored by the developer. However, any data associated with the application should be assumed to be insecure, may be automatically backed up by the Android operating system (including transmission over the internet) or accessed by other applications. If you wish to clear any reminders entered into the application, please click the \'RESET DATA &amp; EXIT\' button on the About page.</string>
    <string name="splash_5">If you disagree with any of the above, please click the \'EXIT\' button below and uninstall the application. If you agree, please click the \'AGREE &amp; CONTINUE\' button to launch the application. This disclaimer can be accessed at any time from the About page by clicking the icon at the top-right corner of the main application screen. A small popup reminder of this disclaimer and the unofficial nature of this QRH adaptation will be displayed at each launch.</string>
    <string name="splash_6">Thank you for reading</string>
    <string name="arrow">Arrow</string>
    <string name="image">Image</string>
    <string name="version_hint">Adapted from QRH section </string>
    <string name="emptySearch">No results</string>
    <string name="locations_header">Locations</string>
    <string name="locations_additional">Additional locations</string>
    <string name="location_arrest">Cardiac arrest trolley</string>
    <string name="location_pacing">Pacing defibrillator</string>
    <string name="location_airway">Airway rescue trolley</string>
    <string name="location_mh">Dantrolene / malignant hyperthermia kit</string>
    <string name="location_la">Lipid rescue / local anaesthetic toxicity kit</string>
    <string name="location_anaphylaxis">Anaphylaxis kit</string>
    <string name="location_rapid">Rapid infusor for i.v. fluid</string>
    <string name="location_salvage">Cell salvage equipment</string>
    <string name="location_ultrasound">Ultrasound machine</string>
    <string name="location_videoscope">Videolaryngoscope</string>
    <string name="location_cric">Cricothyrotomy kit</string>
    <string name="location_jet">Jet ventilator</string>
    <string name="location_scope">Flexible intubating scope</string>
    <string name="location_helpp">Ramping mattress for obese</string>
    <string name="location_muster">Muster points for evacuation</string>
    <string name="location_cooled">Cooled fluids</string>
    <string name="location_ice">Nearest ice machine</string>
    <string name="location_sugammadex">Sugammadex</string>
    <string name="location_firealarm">Fire alarm</string>
  <string name="location_fireext">Fire extinguisher</string>
    <string name="location_equipmentbox">EQUIPMENT LOCATIONS</string>
    <string name="location_settingshint">Please enter locations (top-right)</string>
    <string name="location_additional_1a">Additional 1 name</string>
    <string name="location_additional_1b">Additional 1 content</string>
    <string name="location_additional_2a">Additional 2 name</string>
    <string name="location_additional_2b">Additional 2 content</string>
    <string name="location_additional_3a">Additional 3 name</string>
    <string name="location_additional_3b">Additional 3 content</string>
    <string name="fire1">Evidence of fire (smoke, heat, odour, flash, flame) on patient or drapes, or in patient’s airway</string>
    <string name="fire2">START</string>
    <string name="fire3">Call for help and inform theatre team</string>
    <string name="fire4">&lt;li&gt;Activate fire alarm&lt;li&gt;Dial hospital fire emergency number and report location and nature of fire&lt;li&gt;Bring CO2 fire extinguisher into theatre</string>
    <string name="exit">Exit</string>
    <string name="agree_amp_continue"><![CDATA[Agree & Continue]]></string>
    <string name="disclaimers">View disclaimers</string>
    <string name="resetexit">Reset data &amp; exit</string>
    <string name="iconhint">Click this icon at the top\-right of each guideline to access the original PDF file from the Association of Anaesthetists website.</string>
    <string name="settinghint">Click this icon at the top\-right of pages 0\-4 and 3\-7 to edit location reminders.</string>
</resources>