<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/locations_header"
        app:iconSpaceReserved="false">
        <EditTextPreference
            android:clipToPadding="false"
            android:icon="@drawable/ic_edit_location"
            android:key="location_arrest"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/location_arrest"
            app:dialogIcon="@drawable/ic_edit_location"
            app:dialogTitle="Set location"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:clipToPadding="false"
            android:icon="@drawable/ic_edit_location"
            android:key="location_pacing"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/location_pacing"
            app:dialogIcon="@drawable/ic_edit_location"
            app:dialogTitle="Set location"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:clipToPadding="false"
            android:icon="@drawable/ic_edit_location"
            android:key="location_airway"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/location_airway"
            app:dialogIcon="@drawable/ic_edit_location"
            app:dialogTitle="Set location"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:clipToPadding="false"
            android:icon="@drawable/ic_edit_location"
            android:key="location_mh"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/location_mh"
            app:dialogIcon="@drawable/ic_edit_location"
            app:dialogTitle="Set location"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:clipToPadding="false"
            android:icon="@drawable/ic_edit_location"
            android:key="location_la"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/location_la"
            app:dialogIcon="@drawable/ic_edit_location"
            app:dialogTitle="Set location"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:clipToPadding="false"
            android:icon="@drawable/ic_edit_location"
            android:key="location_anaphylaxis"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/location_anaphylaxis"
            app:dialogIcon="@drawable/ic_edit_location"
            app:dialogTitle="Set location"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:clipToPadding="false"
            android:icon="@drawable/ic_edit_location"
            android:key="location_rapid"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/location_rapid"
            app:dialogIcon="@drawable/ic_edit_location"
            app:dialogTitle="Set location"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:clipToPadding="false"
            android:icon="@drawable/ic_edit_location"
            android:key="location_salvage"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/location_salvage"
            app:dialogIcon="@drawable/ic_edit_location"
            app:dialogTitle="Set location"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:clipToPadding="false"
            android:icon="@drawable/ic_edit_location"
            android:key="location_ultrasound"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/location_ultrasound"
            app:dialogIcon="@drawable/ic_edit_location"
            app:dialogTitle="Set location"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:clipToPadding="false"
            android:icon="@drawable/ic_edit_location"
            android:key="location_videoscope"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/location_videoscope"
            app:dialogIcon="@drawable/ic_edit_location"
            app:dialogTitle="Set location"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:clipToPadding="false"
            android:icon="@drawable/ic_edit_location"
            android:key="location_cric"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/location_cric"
            app:dialogIcon="@drawable/ic_edit_location"
            app:dialogTitle="Set location"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:clipToPadding="false"
            android:icon="@drawable/ic_edit_location"
            android:key="location_jet"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/location_jet"
            app:dialogIcon="@drawable/ic_edit_location"
            app:dialogTitle="Set location"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:clipToPadding="false"
            android:icon="@drawable/ic_edit_location"
            android:key="location_scope"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/location_scope"
            app:dialogIcon="@drawable/ic_edit_location"
            app:dialogTitle="Set location"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:clipToPadding="false"
            android:icon="@drawable/ic_edit_location"
            android:key="location_helpp"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/location_helpp"
            app:dialogIcon="@drawable/ic_edit_location"
            app:dialogTitle="Set location"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:clipToPadding="false"
            android:icon="@drawable/ic_edit_location"
            android:key="location_muster"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/location_muster"
            app:dialogIcon="@drawable/ic_edit_location"
            app:dialogTitle="Set location"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:clipToPadding="false"
            android:icon="@drawable/ic_edit_location"
            android:key="location_cooled"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/location_cooled"
            app:dialogIcon="@drawable/ic_edit_location"
            app:dialogTitle="Set location"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:clipToPadding="false"
            android:icon="@drawable/ic_edit_location"
            android:key="location_ice"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/location_ice"
            app:dialogIcon="@drawable/ic_edit_location"
            app:dialogTitle="Set location"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:clipToPadding="false"
            android:icon="@drawable/ic_edit_location"
            android:key="location_sugammadex"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/location_sugammadex"
            app:dialogIcon="@drawable/ic_edit_location"
            app:dialogTitle="Set location"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:clipToPadding="false"
            android:icon="@drawable/ic_edit_location"
            android:key="location_firealarm"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/location_firealarm"
            app:dialogIcon="@drawable/ic_edit_location"
            app:dialogTitle="Set location"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:clipToPadding="false"
            android:icon="@drawable/ic_edit_location"
            android:key="location_fireext"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/location_fireext"
            app:dialogIcon="@drawable/ic_edit_location"
            app:dialogTitle="Set location"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/locations_additional">
        <SwitchPreference
            android:defaultValue="false"
            android:key="additional_1"
            android:title="Additional location 1"
            app:iconSpaceReserved="false"/>
        <EditTextPreference
            android:clipToPadding="false"
            android:icon="@drawable/ic_add_location"
            android:dependency="additional_1"
            android:key="additional_1_name"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/location_additional_1a"
            app:dialogIcon="@drawable/ic_add_location"
            app:dialogTitle="Set name"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:clipToPadding="false"
            android:icon="@drawable/ic_edit_location"
            android:key="additional_1_location"
            android:selectAllOnFocus="true"
            android:dependency="additional_1"
            android:singleLine="true"
            android:title="@string/location_additional_1b"
            app:dialogIcon="@drawable/ic_edit_location"
            app:dialogTitle="Set location"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="additional_2"
            android:title="Additional location 2"
            app:iconSpaceReserved="false"/>
        <EditTextPreference
            android:clipToPadding="false"
            android:icon="@drawable/ic_add_location"
            android:dependency="additional_2"
            android:key="additional_2_name"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/location_additional_2a"
            app:dialogIcon="@drawable/ic_add_location"
            app:dialogTitle="Set name"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:clipToPadding="false"
            android:icon="@drawable/ic_edit_location"
            android:key="additional_2_location"
            android:selectAllOnFocus="true"
            android:dependency="additional_2"
            android:singleLine="true"
            android:title="@string/location_additional_2b"
            app:dialogIcon="@drawable/ic_edit_location"
            app:dialogTitle="Set location"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="additional_3"
            android:title="Additional location 3"
            app:iconSpaceReserved="false"/>
        <EditTextPreference
            android:clipToPadding="false"
            android:icon="@drawable/ic_add_location"
            android:dependency="additional_3"
            android:key="additional_3_name"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/location_additional_3a"
            app:dialogIcon="@drawable/ic_add_location"
            app:dialogTitle="Set name"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:clipToPadding="false"
            android:icon="@drawable/ic_edit_location"
            android:key="additional_3_location"
            android:selectAllOnFocus="true"
            android:dependency="additional_3"
            android:singleLine="true"
            android:title="@string/location_additional_3b"
            app:dialogIcon="@drawable/ic_edit_location"
            app:dialogTitle="Set location"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

</PreferenceScreen>